<resources>
    <string name="app_name">Yossef Market</string>
    <string name="fragment_login_title">Welcome Back!</string>
    <string name="email_layout_hint">E-Mail</string>
    <string name="password_layout_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_frag_title">Welcome</string>
    <string name="register_button">Register</string>
    <string name="facebook_button">Facebook</string>
    <string name="google_button">Google</string>
    <string name="fragment_login_subtitle">login in</string>
    <string name="fragment_login_hint">Or Login With</string>
    <string name="fragment_register_title">Register</string>
    <string name="layout_phone_hint">Phone Number</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>