<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="800dp"
        android:layout_height="650dp"
        android:layout_marginStart="-20dp"
        android:layout_marginEnd="-20dp"
        android:background="@drawable/round_primary_background"
        android:translationY="-200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/welcome_frag_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="?colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682"
        app:srcCompat="@drawable/ic_cart_shop"
        app:tint="?colorOnPrimary" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/google"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/material_dynamic_neutral95"
        android:contentDescription="@string/facebook_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="12dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="12dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:icon="@drawable/ic_google"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.506" />

    <Button
        android:id="@+id/facebook"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/facebook"
        android:contentDescription="@string/google_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:icon="@drawable/ic_facebook"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.506" />

    <Space
        android:id="@+id/space"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />
</androidx.constraintlayout.widget.ConstraintLayout>